# lalang

./: README.md  pyproject.toml
src/lalang/: __init__.py  __main__.py  config.py  grammar.py  huruf.py  keywords.py  lalang.py  searchable.py  snippets.py
src/lalang/data/: import_dart.txt  import_go.txt  import_java.txt  import_ts.txt  snippets.txt
src/lalang/item_block/: __init__.py  anonymous_function.py  class_item.py  constructor_content.py  exception_item.py  field_content.py  function_item.py  interface_item.py  method_content.py  scope_item.py
src/lalang/item_export/: __init__.py
src/lalang/item_expression/: __init__.py  function_call.py  literal.py  match_expression.py  operator.py  range_expression.py
src/lalang/item_import/: __init__.py
src/lalang/item_package/: __init__.py
src/lalang/item_statement/: __init__.py  assignment_statement.py  condition_body.py  const_declaration.py  declaration_config.py  destructuring_statement.py  enum_declaration.py  for_statement.py  if_statement.py  single_statement.py  switch_statement.py  typealias_declaration.py  var_declaration.py  while_statement.py
src/lalang/zgenerate/: __init__.py  common.py  gen_dart.py  gen_go.py  gen_java.py  gen_kt.py  gen_py.py  gen_rb.py  gen_rs.py  gen_ts.py  gen_v.py
src/lalang/zops/: README.md  array_operation.py  dataframe_operation.py  dataops.py  datetime_operation.py  dict_operation.py  faker_ops.py  file_operation.py  fmus_ops.py  gui_operation.py  number_operation.py  orm_operation.py  react_operation.py  redis_operation.py  set_operation.py  stdout_operation.py  (+2 more)
(+137 files in other folders)
